Fix intro on mobile

--- a/styles.css
+++ b/styles.css
@@ -553,10 +553,7 @@ section#about img {
         flex-direction: column;
     }
 
-    #headertext,
-    #keith {
-        font-size: 2rem;
-    }
+  
 
     section {
         flex-direction: column;
@@ -572,12 +569,15 @@ section#about img {
         position: fixed;
     }
 
-    #subheadertext {
-        font-family: spectralSC;
-        color: white;
-        font-size: 1rem;
-        text-shadow: none;
+    #keith {
+        font-size: 2rem;
+        margin-left: 1rem;
+        font-weight: bolder;
     }
+#headertext {
+    flex-direction: column;
+    justify-content: center;
+}
 
     #shortcuts {
         display: none;
@@ -630,9 +630,9 @@ section#about img {
         justify-content: space-around;
         align-items: center;
     }
-
-
-
+    #lefttext h2 {
+        font-size: 2rem;
+    }
 }
 
 @media (min-width: 601px) {
@@ -655,8 +655,8 @@ section#about img {
 
 #subheadertext {
     font-size: 2rem;
-    text-align: left;
-    margin-left: 8rem;
+    text-align: center;
+
 }
 
 #lefttext {
